@@ -8,6 +8,7 @@ Date: idk
     - Fixed that bitumen seeps did not respect quality.
     - Fixed that the bitumen seep hidden assembler did not perserve the direction of the parent mining drill.
     - Bitumen seep hidden assemblers are now hidden in factoriopedia.
+    - Fixed unfriendly usage of YAFC's script_enabled table. Resolves https://github.com/pyanodon/pybugreports/issues/672
     - A rose by any other quality would smell as sweet
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.1
